<resources>
    <string name="app_name">AssistiveTouchClone</string>
    <string name="language_choose">Choose language</string>
    <string name="language_default">Default</string>
    <string name="language_vietnamese">Vietnamese</string>
    <string name="language_english">English</string>
    <string name="language_arabic">Arabic</string>
    <string name="language_german">German</string>
    <string name="language_finnish">Finnish</string>
    <string name="language_indonesian">Indonesia</string>
    <string name="language_portuguese">Português</string>
    <string name="language_malay">Bahasa Melayu</string>
    <string name="language_tagalog">Tagalog</string>
    <string name="button_continue">Continue</string>
    <string name="title_assistive_touch">Assistive Touch</string>
    <string name="assistive_touch">Assistive\nTouch</string>
    <string name="status_off">Off</string>
    <string name="status_on">On</string>
    <string name="card_customize">Customize</string>
    <string name="card_icons">Icons</string>
    <string name="card_cleaner">Settings Cleaner</string>
    <string name="card_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="background_color">Background color</string>
    <string name="gesture_settings">Gesture settings</string>
    <string name="gesture_single_tap">Single tap</string>
    <string name="gesture_double_tap">Double tap</string>
    <string name="gesture_hold">Long press</string>
    <string name="gesture_action_menu">Open menu</string>
    <string name="gesture_none">None</string>
    <string name="gesture_minimize">Minimize</string>
    <string name="transition_speed">Transition speed</string>
    <string name="speed_fast">Fast</string>
    <string name="system_actions_title">System Actions</string>
    <string name="system_action_icon">System action icon</string>
    <string name="start_floating_button">Start Floating Button</string>
    <string name="stop_floating_button">Stop Floating Button</string>
    <string name="icon_title">Icons</string>
    <string name="product_list_title">App List</string>
    <string name="favourite_apps">Favourite Apps</string>
    <string name="add_app">Add App</string>
    <string name="back">Back</string>
    <string name="popup_lock">Lock</string>
    <string name="popup_home">Home</string>
    <string name="popup_favourite">Favourite</string>
    <string name="popup_screen">Screen</string>
    <string name="popup_settings">Settings</string>
    <string name="popup_wifi">Wifi</string>
    <string name="popup_bluetooth">Bluetooth</string>
    <string name="popup_rotate_lock">Rotate Lock</string>
    <string name="popup_location">Location</string>
    <string name="popup_volume_up">Volume Up</string>
    <string name="popup_volume_down">Volume Down</string>
    <string name="popup_normal">Normal</string>
    <string name="popup_flash">Flash</string>
    <string name="page_indicator_format">%1$d/%2$d MAIN</string>
    <string name="toast_not_configured">Not configured</string>
    <string name="toast_lock_device">Lock (device lock)</string>
    <string name="toast_screen_action">Screen action</string>
    <string name="toast_power">Power</string>
    <string name="toast_device_admin_enabled">Device Admin Enabled</string>
    <string name="toast_device_admin_disabled">Device Admin Disabled</string>
</resources>