<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="84dp"
    android:gravity="center_vertical"
    android:orientation="horizontal">
    <ImageView
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/highlight_24px"
        android:contentDescription="@string/gesture_settings" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_weight="1"
        android:text="@string/gesture_double_tap"
        android:textSize="22sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gesture_none"
        android:textColor="#858585"
        android:textSize="22sp" />
</LinearLayout>